--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /* Reset defaults */
 * {
   margin: 0;
@@ -95,6 +96,19 @@ nav a:hover {
   background-color: #0066cc;
 }
 
+.btn-sm {
+  font-size: 13px;
+  padding: 5px 10px;
+}
+
+.btn-success {
+  background-color: green;
+}
+
+.btn-danger {
+  background-color: red;
+}
+
 /* ========== FOOTER ========== */
 footer {
   background-color: #ddd;
@@ -133,6 +147,7 @@ footer {
     font-size: 16px;
   }
 }
+
 .crud-table {
   width: 100%;
   border-collapse: collapse;
@@ -154,6 +169,7 @@ footer {
 .crud-table tr:nth-child(even) {
   background-color: #f2f2f2;
 }
+
 .admin-table {
   width: 100%;
   border-collapse: collapse;
